# acs-next

./: CLAUDE.md  go.work  go.work.sum
.tekton/: admission-controller-build.yaml  admission-controller-test.yaml  api-generate.yaml  broker-build.yaml  broker-test.yaml  collector-build.yaml  collector-nats-test.yaml  kind-vm-image-build.yaml  runtime-evaluator-build.yaml
.tekton/e2e/: pipeline-e2e.yaml  pipelinerun-e2e.yaml  rbac.yaml
admission-controller/: Dockerfile  Makefile  go.mod  go.sum
api/: buf.gen.yaml  buf.yaml  go.mod
apis/: Makefile  go.mod  go.sum
apis/evaluator/: evaluator.go  evaluator_test.go  fields.go
argocd/: application.yaml  infra.yaml
broker/: Dockerfile  Makefile  README.md  go.mod
collector/: vcpkg.json
collector-nats/: CMakeLists.txt  Dockerfile  Makefile  README.md
collector-nats/include/: NatsClient.h
collector-nats/src/: NatsClient.cpp
collector-nats/test/: nats_client_test.cpp
collector/collector/proto/: CMakeLists.txt
collector/collector/proto/acs/broker/v1/: common.proto
docs/: README.md  architecture.md  brief.md  crds.md  data-architecture.md  deployment.md  gap-analysis.md  multi-cluster.md  position-paper.md  proposal.md  rationale.md  strategic-decision.md  summary.md
docs/architecture/: README.md  central-integration.md  crds.md  data-architecture.md  deployment.md  multi-cluster.md
docs/components/: broker.md  consumers.md  policy-engine.md  scanner.md
hack/: kind-kubectl  rox-sandbox
kind-vm-image/: README.md  customize-commands.txt  kind-setup.sh
platform/: kustomization.yaml
platform/admission-controller/: deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook-config.yaml
platform/broker/: deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
platform/collector/: daemonset.yaml  kustomization.yaml  scc.yaml  serviceaccount.yaml
platform/crds/: kustomization.yaml  policy.stackrox.io_clusterstackroxpolicies.yaml  policy.stackrox.io_stackroxpolicies.yaml
platform/forgejo/: deployment.yaml  init-forgejo.sh  pvc.yaml  route.yaml  service.yaml
platform/infra/: kustomization.yaml
runtime-evaluator/: Dockerfile  Makefile  go.mod  go.sum
(+71 files in other folders)
